# Probability-of-Collision-for-Safe-Planning

./: GMMcheckpoint_2018-04-23_02_20_10.txt  GMMcheckpoint_2018-04-23_02_39_38.txt  GMMcheckpoint_2018-04-23_11_21_24.txt  GMMcheckpoint_2018-04-23_15_26_38.txt  GMMsimReport_2018-04-23_02_26_56.txt  GMMsimReport_2018-04-23_15_19_39.txt  MCSimulation.py  README.md  SimulationHistogramTimes.csv  astar_planner.py  checkpoint_2018-04-15 00:10:16.txt  checkpoint_2018-04-15 09:38:31.txt  checkpoint_2018-04-20_17_28_18.txt  checkpoint_2018-04-22_22_23_40.txt  gaussprop.py  gaussprop_test.py  hw2_astar.py  ideasExplored.txt  linConstraint.py  playbox.kinbody.xml  plotData.m  pr2custom.env.xml  pr2test2.env.xml  presentationpoints.txt  simReport_2018-04-14 13:31:00.txt  simReport_2018-04-14_12_25_07.txt  simReport_2018-04-14_16_14_46.txt  simReport_2018-04-14_18_33_58.txt  simReport_2018-04-14_20_36_58.txt  simReport_2018-04-15_06_30_15.txt  simReport_2018-04-15_10_43_21.txt  simReport_2018-04-15_18_04_30.txt
armadillo-8.400.0/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.so.8  libarmadillo.so.8.400.0
armtest/: A_mat.txt  B_mat.txt  armadillosetup.txt  armadillotest.cpp
finalpaper/: ajaay_paper.tex
mcsimplugin/: A_mat.txt  B_mat.txt  CMakeLists.txt  GM_Model.h  MCSimulator.h  mcsimplugin.cpp  testplugin.py
oldstuff/: oldgaussprop.py
presentation_4.16.18/: .~lock.presentation_4.16.pptx#  presentation_4.16.pptx
proposal/: proposal.tex
resources/: 568_sources.txt  maani_3.26.18.txt
(+19 files in other folders)
